--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -18,4 +18,14 @@
   background-color: white;
   color: black;
   border: 1px solid black;
-}/*# sourceMappingURL=custom-button.styles.css.map */
+}
+
+.custom-button.google-sign-in{
+  background-color: #4285f4;
+  color: white;
+}
+
+.custom-button.google-sign-in:hover {
+  background-color: #357ae8;
+  border: none;
+}
