--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -19,4 +19,9 @@
 }
 .cart-dropdown button {
   margin-top: auto;
-}/*# sourceMappingURL=cart-dropdown.styles.css.map */
+}
+
+.cart-dropdown .empty-message {
+  font-size: 18px;
+  margin: 50px auto;
+}
